[project]
name = "weldon-lab"
version = "0.1.0"
description = "Weldon's personal lab for experiments (scraping, automation, ML, etc.)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "crawl4ai",
    "google-genai>=1.52.0",
    "google-generativeai>=0.8.5",
    "playwright",
    "python-dotenv",
]

[tool.uv]
# You can add uv-specific options here later if you want.
